# vacuum-robot-poc

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
embedded-os/conf/: local.conf
embedded-os/meta-vacuum/: README
embedded-os/meta-vacuum/conf/: layer.conf
embedded-os/meta-vacuum/recipes-robot/vacuum-navigator/: ros-humble-vacuum-navigator_0.0.1.bb
embedded-os/meta-vacuum/recipes-robot/vacuum-navigator/files/: CMakeLists.txt  package.xml
embedded-os/meta-vacuum/recipes-robot/vacuum-navigator/files/src/: vacuum_node.cpp
src/: main.cpp  mock_brain.cpp
